just added a date modified.

--- a/index.htm
+++ b/index.htm
@@ -3,8 +3,7 @@
 <title>anaglyphic</title>
 <head>
 <body>
-<h1>AnaGlyphic</h1>
-<p>Yksjdf kshdf hsdk fhsdk fh khsdkf lsdf.</p>
-<p>973498579837495 9374 57983749587394857938475</p>
+<h1>anaglyphic</h1>
+<p>Date Modified: 22 Junw 2012 17:08</p>
 </body>
 </html>
