--- a/index.htm
+++ b/index.htm
@@ -1,9 +1,10 @@
 <html>
 <head>
 <title>anaglyphic</title>
+<link rel="stylesheet" type="text/css" href="anaglyphic.css">
 <head>
 <body>
 <h1>anaglyphic</h1>
-<p>Date Modified: 22 Junw 2012 17:08</p>
+<p>Date Modified: 22 June 2012 17:08</p>
 </body>
 </html>
