added a javascript file

--- a/index.htm
+++ b/index.htm
@@ -1,10 +1,12 @@
 <html>
 <head>
 <title>anaglyphic</title>
-<link rel="stylesheet" type="text/css" href="anaglyphic.css">
+<link rel="stylesheet" type="text/css" href="anaglyphic.css" />
+<script type="text/javascript" src="anaglyphic.js" />
 <head>
 <body>
 <h1>anaglyphic</h1>
+<p><a onclick='test()'>click</a><p>
 <p>Date Modified: 22 June 2012 17:08</p>
 </body>
 </html>
