--- a/index.htm
+++ b/index.htm
@@ -2,11 +2,11 @@
 <head>
 <title>anaglyphic</title>
 <link rel="stylesheet" type="text/css" href="anaglyphic.css" />
-<script type="text/javascript" src="anaglyphic.js" />
+<script type="text/javascript" src="anaglyphic.js"></script>
 <head>
 <body>
 <h1>anaglyphic</h1>
-<p><a onclick='test()'>click</a><p>
-<p>Date Modified: 22 June 2012 17:08</p>
+<p><a onclick="test()">click</a><p>
+<p>Date Modified: 22 June 2012 19:08</p>
 </body>
 </html>
