--- a/index.htm
+++ b/index.htm
@@ -5,8 +5,8 @@
 <script type="text/javascript" src="anaglyphic.js"></script>
 <head>
 <body>
-<h1>anaglyphic</h1>
+<h1><div class="divHead">anaglyphic</div></h1>
 <p><a onclick="test()">click</a><p>
-<p>Date Modified: 22 June 2012 19:08</p>
+<div class="divFoot">Date Modified: 22 June 2012 19:08</div>
 </body>
 </html>
