--- a/index.htm
+++ b/index.htm
@@ -1,12 +1,19 @@
 <html>
 <head>
 <title>anaglyphic</title>
+<script type="text/javascript" src="https://ajax.googleapis.com/ajax/libs/jquery/1.7.2/jquery.min.js"></script>
 <link rel="stylesheet" type="text/css" href="anaglyphic.css" />
 <script type="text/javascript" src="anaglyphic.js"></script>
 <head>
 <body>
 <h1><div class="divHead">anaglyphic</div></h1>
-<p><a onclick="test()">click</a><p>
+
+<!-- http://html5.litten.com/layers/canvaslayers.html -->
+<div class="divViewport" style="position:relative; width:500px; height:300px">
+<canvas style="z-index: 1; position:absolute;left:0px;top:0px; opacity:0.50;" id='canvas2' width="500px" height="300px"></canvas>
+<canvas style="z-index: 2; position:absolute;left:0px;top:0px; opacity:0.50;" id='canvas2a' width="500px" height="300px"></canvas>
+</div>
+
 <div class="divFoot">Date Modified: 22 June 2012 19:08</div>
 </body>
 </html>
