<head>...<head> -> <head>...</head>

--- a/index.htm
+++ b/index.htm
@@ -5,7 +5,7 @@
 <script type="text/javascript" src="https://ajax.googleapis.com/ajax/libs/jquery/1.7.2/jquery.min.js"></script>
 <link rel="stylesheet" type="text/css" href="anaglyphic.css" />
 <script type="text/javascript" src="anaglyphic.js"></script>
-<head>
+</head>
 <body>
 <h1><div class="divHead">anaglyphic</div></h1>
 
