--- a/index.htm
+++ b/index.htm
@@ -7,12 +7,12 @@
 <script type="text/javascript" src="anaglyphic.js"></script>
 </head>
 <body>
-<h1><div class="divHead">anaglyphic</div></h1>
+<h1><span class="spanHead">anaglyphic</span></h1>
 
 <!-- http://html5.litten.com/layers/canvaslayers.html -->
 <div class="divViewport" style="position:relative; width:500px; height:300px">
-<canvas style="z-index: 1; position:absolute;left:0px;top:0px; opacity:0.50;" id='canvas2' width="500px" height="300px"></canvas>
-<canvas style="z-index: 2; position:absolute;left:0px;top:0px; opacity:0.50;" id='canvas2a' width="500px" height="300px"></canvas>
+<canvas style="z-index: 1; position:absolute;left:0px;top:0px; opacity:0.50;" id='canvas2' width="500" height="300"></canvas>
+<canvas style="z-index: 2; position:absolute;left:0px;top:0px; opacity:0.50;" id='canvas2a' width="500" height="300"></canvas>
 </div>
 
 <div class="divFoot">Date Modified: 25 June 2012 09:26</div>
