--- a/index.htm
+++ b/index.htm
@@ -8,7 +8,7 @@
 <script type="text/javascript" src="anaglyphic.js"></script>
 </head>
 <body>
-<h1><span class="spanHead">anaglyphic</span></h1>
+<h1>anaglyphic</h1>
 
 <!-- http://html5.litten.com/layers/canvaslayers.html -->
 <div class="divViewport" style="position:relative; width:500px; height:300px">
