added div "divH1"

--- a/index.htm
+++ b/index.htm
@@ -8,7 +8,7 @@
 <script type="text/javascript" src="anaglyphic.js"></script>
 </head>
 <body>
-<h1>anaglyphic</h1>
+<div class="divH1"><h1>anaglyphic</h1></div>
 
 <!-- http://html5.litten.com/layers/canvaslayers.html -->
 <div class="divViewport" style="position:relative; width:500px; height:300px">
