added some buttons

--- a/index.htm
+++ b/index.htm
@@ -16,6 +16,12 @@
 <canvas style="z-index: 2; position:absolute;left:0px;top:0px; opacity:0.50;" id='canvas2a' width="500" height="300"></canvas>
 </div>
 
+<div class="divShapes">
+	<input type="button" value="cubes" onClick="shapeCubes()" />
+	<input type="button" value="s1" onClick="shapeS1()" />
+	<input type="button" value="p1" onClick="shapeP1()" />
+</div>
+
 <div class="divFoot">Date Modified: 25 June 2012 09:26</div>
 </body>
 </html>
